feat: added features

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
       content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no"
     />
     <title>Vite + Mantine App</title>
+    <style>
+      @keyframes blink {
+        0%, 100% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0.7;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
